fix(#populaires): padding bottom on mobile

--- a/styles.css
+++ b/styles.css
@@ -592,6 +592,7 @@ a {
     flex: 1;
     order: 1;
     border-radius: 0;
+    padding-bottom: 20px;
   }
 
   #activites {
